--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  audioplayers: ^6.1.0
+  flutter_launcher_icons: ^0.14.4
   flutter_riverpod: ^2.6.1
   google_fonts: ^6.2.1
   hive: ^2.2.3
@@ -17,6 +19,10 @@ dependencies:
   http: ^1.3.0
   mobile_scanner: ^6.0.7
   path_provider: ^2.1.5
+  cached_network_image: ^3.4.1
+  image_picker: ^1.1.2
+  camera: ^0.11.0+2
+  image: ^4.3.0
 
 dev_dependencies:
   flutter_test:
@@ -26,4 +32,11 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/sounds/
+
+flutter_launcher_icons:
+  android: true       # Use "launcher_icon" for the Android icon name
+  ios: false           # Generate icons for iOS
+  image_path: "assets/icon/icon.png" # Path to your master icon
    
