--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   audioplayers: ^6.1.0
   flutter_launcher_icons: ^0.14.4
+  flutter_native_splash: ^2.4.2
   flutter_riverpod: ^2.6.1
   google_fonts: ^6.2.1
   hive: ^2.2.3
@@ -36,5 +37,13 @@ flutter:
 flutter_launcher_icons:
   android: true       # Use "launcher_icon" for the Android icon name
   ios: false           # Generate icons for iOS
-  image_path: "assets/icon/icon.png" # Path to your master icon
-   
+  image_path: "assets/icon/app_icon.png" # Path to your master icon
+
+flutter_native_splash:
+  color: "#FFFFFF"  # Background color (adjust to match your theme)
+  image: "assets/icon/app_icon.png"  # Your splash screen image
+  android: true
+  ios: true
+  android_12:
+    image: "assets/icon/app_icon.png"
+    color: "#FFFFFF"
